<resources>
    <string name="app_name">Healthy Life</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="or_registration_with">или зарегистрироваться с помощью</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="btnCreateAkk">Создать аккаунт</string>
    <string name="data_processing_conditions">условиями обработки данных</string>
    <string name="privacy_policy">политикой конфиденциальности</string>
    <string name="enter_text">Вход</string>
    <string name="enter_button_text">Войти</string>
    <string name="enter_text_one">или войти с помощью</string>
    <string name="image_secure">Image secure</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_underlined"><u>Зарегистрироваться</u></string>
    <string name="or_register_with">или зарегистрироваться с помощью</string>
    <string name="vk_clickable_icon">VK Clickable Icon</string>
    <string name="yandex_clickable_icon">Yandex Clickable Icon</string>
    <string name="google_clickable_icon">Google Clickable Icon</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="log_in_underlined"><u>Войти</u></string>
    <string name="log_in">Войти</string>
    <string name="log_in_error">Попробовать снова</string>
    <string name="password">Пароль</string>
    <string name="i_agree_with">Я согласен с</string>
    <string name="create_an_account">Создать аккаунт</string>
    <string name="no_connection_icon">No Internet Connection Icon</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="we_are_figuring_out">Мы уже разбираемся</string>
    <string name="back_icon">Back Icon</string>
    <string name="or_log_in_with">или войти с помощью</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="min_one_capital_letter">Минимум 1 заглавная буква</string>
    <string name="min_one_lowercase_letter">Минимум 1 строчная буква</string>
    <string name="min_one_digit">Минимум 1 цифра</string>
    <string name="min_amount_digits">Минимум 8 символов</string>
    <string name="connection_error">Не удается подключиться к серверу</string>
    <string name="internal_error">Внутренняя ошибка! Попробуйте позже…</string>
    <string name="auth_error">Время сессии истекло!</string>
    <string name="try_again">Повторить</string>
    <string name="field_is_empty">Пустое поле</string>
    <string name="account_already_exists">Аккаунт уже существует</string>
    <string name="sign_up_success">Готово!</string>
    <string name="action_logout">Выйти</string>
    <string name="error_email">Неверный формат почты</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="invalid_email_or_password">Неверный логин или пароль</string>
</resources>