<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent"
    android:background="@color/white_base"
    android:fillViewport="true"
    tools:context="com.exlab.healthylife.presentation.screens.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            style="@style/wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_minor" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            style="@style/wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_minor" />

        <ImageButton
            android:id="@+id/bBack"
            style="@style/wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/tvTitle"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/register"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.akexorcist.roundcornerprogressbar.indeterminate.IndeterminateCenteredRoundCornerProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="5dp"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:rcAnimationEnable="true"
            android:layout_marginTop="@dimen/margin_small"
            app:rcAnimationSpeedScale="1.5"
            app:rcBackgroundColor="@color/white_base"
            app:rcProgressColor="@color/blue_base" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:errorTextColor="@color/coral_base"
            app:errorIconTint="@color/coral_base"
            app:boxStrokeErrorColor="@color/coral_base"
            app:boxStrokeColor="@color/light_gray"
            app:counterOverflowTextColor="@color/blue_base"
            app:hintTextColor="@color/blue_base"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/bBack"
            android:fontFamily="@font/lato"
            app:placeholderText="johndoe@gmail.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:maxLength="65"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColorHighlight="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textColor="@color/black_base"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:boxStrokeColor="@color/light_gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue_base"
            app:hintTextColor="@color/blue_base"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:fontFamily="@font/lato"
            app:placeholderText="Abcd4957">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:textCursorDrawable="@null"
                android:textColor="@color/black_base"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCapitalLetterRequirement"
            style="@style/wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:drawablePadding="@dimen/text_margin_default"
            android:text="@string/min_one_capital_letter"
            android:textSize="@dimen/text_size_small"
            app:drawableLeftCompat="@drawable/round_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            tools:drawableLeftCompat="@drawable/tick_icon"
            tools:textColor="@color/blue_base" />

        <TextView
            android:id="@+id/tvLowercaseLetterRequirement"
            style="@style/wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/text_margin_default"
            android:drawablePadding="@dimen/text_margin_default"
            android:text="@string/min_one_lowercase_letter"
            android:textSize="@dimen/text_size_small"
            app:drawableLeftCompat="@drawable/round_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvCapitalLetterRequirement" />

        <TextView
            android:id="@+id/tvDigitRequirement"
            style="@style/wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/text_margin_default"
            android:drawablePadding="@dimen/text_margin_default"
            android:text="@string/min_one_digit"
            android:textSize="@dimen/text_size_small"
            app:drawableLeftCompat="@drawable/round_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvLowercaseLetterRequirement" />

        <TextView
            android:id="@+id/tvCharsAmountRequirement"
            style="@style/wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/text_margin_default"
            android:drawablePadding="@dimen/text_margin_default"
            android:text="@string/min_amount_digits"
            android:textSize="@dimen/text_size_small"
            app:drawableLeftCompat="@drawable/round_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvDigitRequirement" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupPasswordHints"
            style="@style/wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="
            tvCapitalLetterRequirement,
            tvCharsAmountRequirement,
            tvDigitRequirement,
            tvLowercaseLetterRequirement" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHints"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="
            tvLowercaseLetterRequirement,
            tvCapitalLetterRequirement,
            tvCharsAmountRequirement,
            tvDigitRequirement,
            tilPassword" />

        <CheckBox
            android:id="@+id/cbAgreeDataProcessing"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/margin_minor"
            android:buttonTint="@color/blue_base"
            android:fontFamily="@font/lato"
            android:text="@string/i_agree_with"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/barrierHints"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/ctvDataProcessing"
            style="@style/wrap_content"
            android:layout_marginStart="@dimen/text_margin_default"
            android:text="@string/data_processing_conditions"
            android:textColor="@color/blue_base"
            android:fontFamily="@font/lato"
            app:layout_constraintBottom_toBottomOf="@id/cbAgreeDataProcessing"
            app:layout_constraintStart_toEndOf="@id/cbAgreeDataProcessing"
            app:layout_constraintTop_toTopOf="@id/cbAgreeDataProcessing" />

        <CheckBox
            android:id="@+id/cbAgreePolicy"
            style="@style/wrap_content"
            android:buttonTint="@color/blue_base"
            android:fontFamily="@font/lato"
            android:text="@string/i_agree_with"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/cbAgreeDataProcessing"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/ctvPolicy"
            style="@style/wrap_content"
            android:layout_marginStart="@dimen/text_margin_default"
            android:fontFamily="@font/lato"
            android:text="@string/privacy_policy"
            android:textColor="@color/blue_base"
            app:layout_constraintBottom_toBottomOf="@id/cbAgreePolicy"
            app:layout_constraintStart_toEndOf="@id/cbAgreePolicy"
            app:layout_constraintTop_toTopOf="@id/cbAgreePolicy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bCreateAccount"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/margin_medium"
            app:backgroundTint="@color/light_gray"
            android:clickable="false"
            android:fontFamily="@font/lato"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            android:textColor="@color/white_base"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/ctvPolicy"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            style="@style/wrap_content"
            android:layout_marginEnd="@dimen/text_margin_default"
            android:fontFamily="@font/lato"
            android:layout_marginBottom="@dimen/margin_major"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvcLogIn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/tvcLogIn"
            style="@style/wrap_content"
            android:layout_marginBottom="@dimen/margin_major"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato"
            android:text="@string/log_in_underlined"
            android:textColor="@color/blue_base"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tvAlreadyHaveAccount"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>